fixed an image overlap issue
the food card image was overlapping the other menus, fixed by removing the position

--- a/frontend/src/styles/FoodSocialCard.module.css
+++ b/frontend/src/styles/FoodSocialCard.module.css
@@ -40,7 +40,7 @@
   }
   
   .imageContainer {
-    position: relative;
+    /*position: relative;*/
     height: 12rem;
     width: 100%;
   }
