--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbardiv {
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: fixed;
   left: 0;
   top: 0;
   height: 100%;
